# CamperoUR10-TFG

./: .gitignore  README.md  demostrador_teleop_aruco.txt  mejorar_presentacion.txt  ws_walls.scene
src/aruco_ros/aruco/: CMakeLists.txt  package.xml
src/aruco_ros/aruco_ros/: CMakeLists.txt  package.xml
src/campero_ur10/campero_ur10_msgs/: CMakeLists.txt  package.xml
src/campero_ur10/campero_ur10_server/: CMakeLists.txt  package.xml
src/campero_ur10/campero_ur10_server/config/: ur10_draw.config
src/campero_ur10/campero_ur10_server/include/c_ur10_def/: c_ur10_utils.h  campero_ur10.h
src/campero_ur10/campero_ur10_server/launch/: campero_ur10_server.launch  draw.launch  teleop.launch
src/campero_ur10/campero_ur10_server/src/: c_ur10_utils.cpp  campero_ur10.cpp  campero_ur10_server.cpp
src/campero_ur10/description/campero_description/: CMakeLists.txt  package.xml
src/campero_ur10/description/campero_description/meshes/bases/: campero_chasis.stl
src/campero_ur10/description/campero_description/meshes/structures/: campero_soporte_laser.stl
src/campero_ur10/description/campero_description/meshes/wheels/: campero_mecanum_b.stl  campero_rueda_goma.stl
src/campero_ur10/description/campero_description/robots/: campero_mecanum.urdf.xacro  campero_rubber_3f.urdf.xacro
src/campero_ur10/description/campero_description/urdf/bases/: campero_base.gazebo.xacro
src/campero_ur10/description/campero_description/urdf/robotiq_c2/: robotiq_85_gripper.urdf.xacro
src/campero_ur10/description/campero_description/urdf/robotiq_force_torque_sensor/: robotiq_fts300.urdf.xacro
src/campero_ur10/description/campero_description/urdf/robotiq_s/: s-model_articulated.transmission.xacro  s-model_articulated_macro.xacro
src/campero_ur10/description/campero_description/urdf/structures/: campero_laser_support.urdf.xacro
src/campero_ur10/description/campero_description/urdf/wheels/: mecanum_wheel.urdf.xacro
src/campero_ur10/description/realsense2_camera/: CMakeLists.txt  package.xml
src/campero_ur10/draw_board/: CMakeLists.txt  package.xml
src/campero_ur10/draw_board/include/draw_board/: img_board.hpp  img_params.hpp  utils.h
src/campero_ur10/draw_board/launch/: exec.launch
src/campero_ur10/draw_board/src/: draw.py  draw_board.cpp  draw_board.py  draw_board_cv.py  draw_board_turtle.py  image.py  node.py
src/campero_ur10/image_inpainting/: CMakeLists.txt  package.xml
src/campero_ur10/image_inpainting/include/image_inpainting/: img_params.hpp  img_res.hpp  utils.h
src/campero_ur10/image_inpainting/launch/: exec.launch  test.launch
src/campero_ur10/image_inpainting/src/: image_inpainting.cpp  image_inpainting_gui.py  image_inpainting_old.cpp  test.py  test_edges.cpp  test_pcl.cpp
src/campero_ur10/ur10_moveit_official/: .setup_assistant  CMakeLists.txt  package.xml
src/campero_ur10/ur10_moveit_official/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_limits_real.yaml  joint_limits_sim.yaml  ros_controllers.yaml  ur10.srdf
src/campero_ur10/ur10_moveit_official/launch/: campero_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_moveit_controller_manager.launch.xml  ur10_moveit_planning_execution.launch  warehouse.launch
src/campero_ur10/ur10_moveit_official/tests/: moveit_planning_execution.xml
src/campero_ur10_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/campero_ur10_moveit/config/: campero.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
src/campero_ur10_moveit/launch/: campero_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_old.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/campero_ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/campero_ur10_moveit_config/config/: campero.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
src/campero_ur10_moveit_config/launch/: campero_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_old.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_moveit_planning_execution.launch  warehouse.launch
src/campero_ur10_msgs/: CMakeLists.txt  package.xml
src/campero_ur10_msgs/msg/: ImageDraw.msg  ImgPoint.msg  ImgTrace.msg
src/campero_ur10_pen_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/campero_ur10_server/: CMakeLists.txt  package.xml
src/campero_ur10_test/: CMakeLists.txt  package.xml
src/description/: ur10_campero.urdf.xacro  ur10_campero_pen.urdf.xacro
src/description/campero_ur10_description/: package.xml
src/description/campero_ur10_description/config/: campero_ur10_controllers.yaml  campero_ur10_controllers_old.yaml  ur10_calibration.yaml
src/description/campero_ur10_description/launch/: campero_ur10_bringup.launch
src/description/campero_ur10_description/robots/: campero_ur10.urdf.xacro  ur10_campero_pen.urdf.xacro
test/: rosbag_camera_info.bag  test.py  test_edge.py
(+125 files in other folders)
