<?xml version="1.0"?>
<package format="2">
  <name>campero_ur10_msgs</name>
  <version>1.0.0</version>
  
  <description>
    Message types: custom messages and services for campero_ur10 packages
  </description>
  
  <license>Apache 2.0</license>

  <author email="nachohseara@gmail.com">Nacho</author>
  <maintainer email="nachohseara@gmail.com">Nacho</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
