<?xml version="1.0"?>
<package format="2">
  <name>campero_description</name>
  <version>0.0.0</version>
  <description>URDF description of the Campero robot</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="jgomez@robotnik.es">Jose Gómez</maintainer>
  <maintainer email="mmillet@robotnik.es">Marta Miller</maintainer>

  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robotnik_sensors</exec_depend>

  <export>

  </export>
</package>
